@@ -1,17 +1,17 @@
 require 'bundler'
 
 module Guard
-  
+
   autoload :UI,         'guard/ui'
   autoload :Dsl,        'guard/dsl'
   autoload :Interactor, 'guard/interactor'
   autoload :Listener,   'guard/listener'
   autoload :Watcher,    'guard/watcher'
   autoload :Notifier,   'guard/notifier'
-  
+
   class << self
     attr_accessor :options, :guards, :listener
-    
+
     # initialize this singleton
     def setup(options = {})
       @options  = options
@@ -19,41 +19,41 @@ module Guard
       @guards   = []
       self
     end
-    
+
     def start(options = {})
       setup(options)
-      
+
       Interactor.init_signal_traps
       Dsl.evaluate_guardfile(options)
-      
+
       if guards.empty?
         UI.error "No guards found in Guardfile, please add at least one."
       else
-        UI.info "Guard is now watching at '#{Dir.pwd}'"
-        guards.each { |g| supervised_task(g, :start) }
-        
-        Thread.new { listener.start }
-        wait_for_changes_and_launch_guards
-      end
-    end
-    
-    def wait_for_changes_and_launch_guards
-      loop do
-        if !running? && !listener.changed_files.empty?
-          changed_files = listener.get_and_clear_changed_files
-          if Watcher.match_files?(guards, changed_files)
-            run do
-              guards.each do |guard|
-                paths = Watcher.match_files(guard, changed_files)
-                supervised_task(guard, :run_on_change, paths) unless paths.empty?
-              end
-            end
+        listener.on_change do |files|
+          if Watcher.match_files?(guards, files)
+            run { run_on_change_for_all_guards(files) }
           end
         end
-        sleep 0.2
+
+        UI.info "Guard is now watching at '#{Dir.pwd}'"
+        guards.each { |guard| supervised_task(guard, :start) }
+        listener.start
       end
     end
-    
+
+    def run_on_change_for_all_guards(files)
+      guards.each do |guard|
+        paths = Watcher.match_files(guard, files)
+        supervised_task(guard, :run_on_change, paths) unless paths.empty?
+      end
+      # Reparse the whole directory to catch new files modified during the guards run
+      new_modified_files = listener.modified_files([Dir.pwd + '/'], :all => true)
+      listener.update_last_event
+      unless new_modified_files.empty?
+        run_on_change_for_all_guards(new_modified_files)
+      end
+    end
+
     # Let a guard execute its task but
     # fire it if his work leads to a system failure
     def supervised_task(guard, task_to_supervise, *args)
@@ -64,26 +64,22 @@ module Guard
       UI.info("Guard #{guard.class.name} has just been fired")
       return $!
     end
-    
+
     def run
-      @run = true
+      listener.stop
       UI.clear if options[:clear]
       begin
         yield
       rescue Interrupt
       end
-      @run = false
+      listener.start
     end
-    
-    def running?
-      @run == true
-    end
-    
+
     def add_guard(name, watchers = [], options = {})
       guard_class = get_guard_class(name)
       @guards << guard_class.new(watchers, options)
     end
-    
+
     def get_guard_class(name)
       require "guard/#{name.downcase}"
       klasses = []
@@ -94,12 +90,12 @@ module Guard
     rescue LoadError
       UI.error "Could not find gem 'guard-#{name}', please add it in your Gemfile."
     end
-    
+
     def locate_guard(name)
       `gem open guard-#{name} --latest --command echo`.chomp
     rescue
       UI.error "Could not find 'guard-#{name}' gem path."
     end
-    
+
   end
 end
