@@ -2,8 +2,15 @@ require 'spec_helper'
 require 'guard/listeners/polling'
 
 describe Guard::Polling do
-  subject { Guard::Polling.new }
-  
+
+  before(:each) do
+    @results = []
+    @listener = Guard::Polling.new
+    @listener.on_change do |files|
+      @results += files
+    end
+  end
+
   it "should catch new file" do
     file = @fixture_path.join("newfile.rb")
     File.exists?(file).should be_false
@@ -11,18 +18,18 @@ describe Guard::Polling do
     FileUtils.touch file
     stop
     File.delete file
-    subject.changed_files.should == ['spec/fixtures/newfile.rb']
+    @results.should == ['spec/fixtures/newfile.rb']
   end
-  
+
   it "should catch file update" do
     file = @fixture_path.join("folder1/file1.txt")
     File.exists?(file).should be_true
     start
     FileUtils.touch file
     stop
-    subject.changed_files.should == ['spec/fixtures/folder1/file1.txt']
+    @results.should == ['spec/fixtures/folder1/file1.txt']
   end
-  
+
   it "should catch files update" do
     file1 = @fixture_path.join("folder1/file1.txt")
     file2 = @fixture_path.join("folder1/folder2/file2.txt")
@@ -32,19 +39,19 @@ describe Guard::Polling do
     FileUtils.touch file1
     FileUtils.touch file2
     stop
-    subject.changed_files.sort.should == ['spec/fixtures/folder1/file1.txt', 'spec/fixtures/folder1/folder2/file2.txt']
+    @results.sort.should == ['spec/fixtures/folder1/file1.txt', 'spec/fixtures/folder1/folder2/file2.txt']
   end
-  
+
 private
-  
+
   def start
-    Thread.new { subject.start }
+    Thread.new { @listener.start }
     sleep 1
   end
-  
+
   def stop
     sleep 1
-    subject.stop
+    @listener.stop
   end
-  
+
 end
